feat: footer styles

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
   </header> -->
 
-  <main class="page-main">
+  <main class="page__main">
     <h1 class="visually-hidden">Digital agency IT SQUAD</h1>
     <section class="page__section hero">
       <div class="hero__wrapper">
@@ -268,7 +268,7 @@
     </section>
   </main>
 
-  <footer class="page-footer">
+  <footer class="page__footer">
     <section class="contacts" id="contacts">
       <h2 class="contacts__title title">Get in touch</h2>
 
@@ -290,7 +290,7 @@
 
         <p class="contacts__emails">
           <a class="contacts__email" href="mailto:radwebmax@gmail.com">radwebmax@gmail.com</a>
-          <a class="contacts__email" href="mailto:info@itsquad.agency"></a>
+          <a class="contacts__email" href="mailto:info@itsquad.agency">info@itsquad.agency</a>
           <a class="contacts__email" href="mailto:recruiter@itsquad.agency">recruiter@itsquad.agency</a>
         </p>
 
@@ -309,9 +309,9 @@
             <a class="contacts__social-link" href="#" target="_blank">Calendly</a>
           </li>
         </ul>
-      </div>
 
-      <a class="up-page-anchor" href="#">back to top</a>
+        <a class="contacts__up-btn up-btn" href="#">back to top</a>
+      </div>
     </section>
 
     <section class="powered-by">
