feat: mobile navigation

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <main class="page__main">
       <h1 class="visually-hidden">Digital agency IT SQUAD</h1>
-      <section class="page__section hero">
+      <section class="page__section hero" id="home">
           <p class="hero__time">Ukraine/ <time>10:33</time></p>
           <p class="hero__team-name">IT SQUAD</p>
           <p class="hero__description lead">
@@ -233,7 +233,7 @@
         </div>
       </section>
 
-      <section class="page__section customers">
+      <section class="page__section customers" id="projects">
         <div class="customers__wrapper">
           <h2 class="customers__title title">Our customers</h2>
 
