fix: png to webp

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           </p>
 
           <picture class="hero__image">
-            <source media="(min-width: 601px)" srcset="assets/hero.png" />
-            <img class="hero__image image" src="assets/hero_mobile.png" alt="Our team photo" />
+            <source media="(min-width: 1200px)" width="1241" height="400" srcset="assets/hero.webp" />
+            <img class="hero__image image" width="351" height="371" src="assets/hero_mobile.webp" alt="Our team photo" />
           </picture>
 
           <a class="hero__link-to-contacts link-btn" href="#contacts">Work with us</a>
@@ -85,13 +85,17 @@
             IT SQUAD is a digital agency, specialize in front-end development of online stores on the Shopify platform.
           </p>
 
-          <img
-            class="about__image image"
-            width="350"
-            height="285"
-            src="/assets/about-1.png"
-            alt="Image of our workflow"
-          />
+
+          <picture class="hero__image">
+            <source media="(min-width: 1200px)" width="571" height="576" srcset="assets/about-1.webp" />
+            <img
+              class="about__image image"
+              width="351"
+              height="286"
+              src="/assets/about-1_mobile.webp"
+              alt="Image of our workflow"
+            />
+          </picture>
         </div>
         <div class="about__column">
           <p class="about__description">
@@ -100,14 +104,16 @@
             world through strategy and tech. Our mission is to create remarkable digital experiences that connect brands
             to their customers.
           </p>
-
-          <img
-            class="about__image image"
-            width="350"
-            height="265"
-            src="/assets/about-2.png"
-            alt="Image of our workflow"
-          />
+          <picture class="about__image image">
+            <source media="(min-width: 1200px)" width="571" height="528" srcset="assets/about-2.webp" />
+            <img
+              class="about__image image"
+              width="351"
+              height="266"
+              src="/assets/about-2_mobile.webp"
+              alt="Image of our workflow"
+            />
+          </picture>
 
           <p class="about__values">
             Based in Ukraine. <br />
@@ -215,9 +221,12 @@
       <section class="page__section team">
         <h2 class="team__title title">The team</h2>
         <div class="team__inner">
-          <img class="team__image image" src="/assets/team-1.png" alt="Photo of our team" />
+          <img class="team__image image" width="347" height="1163" src="assets/team-1.webp" alt="Photo of our team" />
 
-          <img class="team__image image" src="/assets/team-2.png" alt="Photo of our team" />
+          <picture class="team__image">
+            <source media="(min-width: 1200px)" width="795" height="538" srcset="assets/team-2.webp" />
+            <img class="team__image image" width="351" height="218" src="assets/team-2_mobile.webp" alt="Our team photo" />
+          </picture>
 
           <p class="team__lead lead">
             We bring a global team of specialized developers, and technicians with a mission of consistently delivering
