--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </p>
 
           <picture class="hero__image">
-            <source media="(min-width: 1200px)" width="1241" height="400" srcset="assets/hero.webp" />
+            <source media="(min-width: 768px)" width="1241" height="400" srcset="assets/hero.webp" />
             <img class="hero__image image" width="351" height="371" src="assets/hero_mobile.webp" alt="Our team photo" />
           </picture>
 
@@ -82,12 +82,12 @@
           <h2 class="about__title title">About</h2>
 
           <p class="about__lead lead">
-            IT SQUAD is a digital agency, specialize in front-end development of online stores on the Shopify platform.
+            IT SQUAD is a digital<wbr/> agency, specialize in front-end development of online stores on the Shopify platform.
           </p>
 
 
           <picture class="hero__image">
-            <source media="(min-width: 1200px)" width="571" height="576" srcset="assets/about-1.webp" />
+            <source media="(min-width: 768px)" width="571" height="576" srcset="assets/about-1.webp" />
             <img
               class="about__image image"
               width="351"
@@ -105,7 +105,7 @@
             to their customers.
           </p>
           <picture class="about__image image">
-            <source media="(min-width: 1200px)" width="571" height="528" srcset="assets/about-2.webp" />
+            <source media="(min-width: 768px)" width="571" height="528" srcset="assets/about-2.webp" />
             <img
               class="about__image image"
               width="351"
@@ -154,7 +154,7 @@
           </div>
 
           <div class="numbers__item">
-            <dt class="numbers__value">9000 +</dt>
+            <dt class="numbers__value">7680 +</dt>
             <dd class="numbers__description">hours coding</dd>
           </div>
 
@@ -224,7 +224,7 @@
           <img class="team__image image" width="347" height="1163" src="assets/team-1.webp" alt="Photo of our team" />
 
           <picture class="team__image">
-            <source media="(min-width: 1200px)" width="795" height="538" srcset="assets/team-2.webp" />
+            <source media="(min-width: 768px)" width="795" height="538" srcset="assets/team-2.webp" />
             <img class="team__image image" width="351" height="218" src="assets/team-2_mobile.webp" alt="Our team photo" />
           </picture>
 
