fix: unlabeled links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="page__body">
     <header class="page-header">
       <nav class="main-nav main-nav--closed">
-        <a class="main-nav__logo" href="/">
+        <a class="main-nav__logo" aria-label="Go to IT SQUAD main page" href="/">
           <svg width="116" height="36" viewBox="0 0 116 36" fill="white" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M45.3722 16.7382C42.2296 15.9684 39.925 15.5834 39.925 12.7705C39.925 11.0236 41.5412 9.86877 44.5641 9.86877C47.9462 9.86877 49.5624 11.3493 49.9515 14.1918H52.6451C52.286 9.80956 49.1134 7.5 44.5641 7.5C39.8353 7.5 37.2314 9.72073 37.2314 13.0666C37.2314 17.1824 41.0624 18.2779 44.2648 19.0182C49.0536 20.1137 50.6398 20.6467 50.6398 23.5485C50.6398 25.4435 49.3229 27.1312 45.6117 27.1312C41.1222 27.1312 39.3265 24.8809 39.0272 21.9791H36.3335C36.6328 26.8351 40.5536 29.5 45.6117 29.5C51.0289 29.5 53.3335 26.6279 53.3335 23.5485C53.3335 18.7221 50.1909 17.9226 45.3722 16.7382Z"
@@ -180,23 +180,23 @@
         <ol class="services__list">
           <li class="services__item">
             Shopify Online Store Development
-            <a class="services__link" href="#"></a>
+            <a class="services__link" href="#" aria-label="Link to Shopify Online Store Development"></a>
           </li>
           <li class="services__item">
             Website Optimization
-            <a class="services__link" href="#"></a>
+            <a class="services__link" href="#" aria-label="Link to Website Optimization"></a>
           </li>
           <li class="services__item">
             Store Migration
-            <a class="services__link" href="#"></a>
+            <a class="services__link" href="#" aria-label="Link to Store Migration"></a>
           </li>
           <li class="services__item">
             Custom Development
-            <a class="services__link" href="#"></a>
+            <a class="services__link" href="#" aria-label="Link to Custom Development"></a>
           </li>
           <li class="services__item">
             E-mail Marketing
-            <a class="services__link" href="#"></a>
+            <a class="services__link" href="#" aria-label="Link to E-mail Marketing"></a>
           </li>
         </ol>
       </section>
